# ilicam

./: .gitignore  CMakeLists.txt  README.md  ilicam.desktop
ilicam/: README.md  ilicam  ilicam.desktop
ilicam/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ilicam/src/: FaceDetector.cpp  FaceDetector.h  MainWindow.h  SettingsManager.h
src/: CameraWorker.cpp  CameraWorker.h  FaceDetector.h  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  SettingsManager.cpp  ZoomManager.cpp  ZoomManager.h  main.cpp
